✨ Added functionality to my profile pages
