# backend/HotelManagement.Infrastructure/EntityFramework/Configuration/UserEntityConfiguration.cs
@@ -15,9 +15,18 @@ internal class UserEntityConfiguration : IEntityTypeConfiguration<User>
 
         builder.Property(q => q.FirstName).IsRequired();
         builder.Property(q => q.LastName).IsRequired();
+        builder.Property(q => q.PhoneNumber).IsRequired();
         builder.Property(q => q.Nationality).IsRequired();
+        builder.Property(q => q.Gender).IsRequired();
+        builder.Property(q => q.Address).IsRequired();
+        builder.Property(q => q.DateOfBirth).IsRequired();
+
+        builder.Property(q => q.RetainSearchHistory).IsRequired();
+        builder.Property(q => q.SendOffersOnEmail).IsRequired();
 
         builder.Property(q => q.CreatedOn).IsRequired();
         builder.Property(q => q.UpdatedOn).IsRequired();
+
+        builder.HasIndex(q => q.Email).IsUnique();
     }
 }
